plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id "com.modrinth.minotaur" version "2.+"
    id "com.matthewprenger.cursegradle" version "1.4.0"
    id 'net.neoforged.gradle.userdev' version '7.0.182'
}

if (project.file('../gradletools.gradle').exists()) {
    apply from: '../gradletools.gradle'
} else {
    apply from: 'https://raw.githubusercontent.com/McJtyMods/MultiWorkspace/1.21_neo/gradletools.gradle'
}

group = "com.github.mcjty"
archivesBaseName = "rftoolsstorage"
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

if (System.getenv('BUILD_NUMBER') != null) {
    version += "-${System.getenv('BUILD_NUMBER')}"
}

repos()
at()
runs()
jars()

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

dependencies {
    mc()
    jei()
    patchouli()
    top()
    mcjtylib()
    rftoolsbase()
}

cfdeps(['the-one-probe'], ['mcjtylib', 'rftools-base'], [])
modrinth(['the-one-probe'], ['mcjtylib', 'rftools-base'], [])
